--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fortune-fighters",
+  "name": "food-manager",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -15,7 +15,9 @@
     "@angular/common": "~11.0.4",
     "@angular/compiler": "~11.0.4",
     "@angular/core": "~11.0.4",
+    "@angular/flex-layout": "^12.0.0-beta.35",
     "@angular/forms": "~11.0.4",
+    "@angular/material": "^12.2.7",
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
