--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.7",
+    "@angular/cdk": "^12.2.7",
     "@angular/common": "~12.2.7",
     "@angular/compiler": "~12.2.7",
     "@angular/core": "~12.2.7",
@@ -22,8 +23,8 @@
     "@angular/platform-browser-dynamic": "~12.2.7",
     "@angular/router": "~12.2.7",
     "jasmine-core": "^3.9.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "rxjs": "7.3.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
