--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start" : "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "heroku-postbuild": "ng build — prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.7",
     "@angular/cdk": "^12.2.7",
+    "@angular/cli": "^14.2.7",
     "@angular/common": "~12.2.7",
     "@angular/compiler": "~12.2.7",
+    "@angular/compiler-cli": "~12.2.7",
     "@angular/core": "~12.2.7",
     "@angular/flex-layout": "^12.0.0-beta.35",
     "@angular/forms": "~12.2.7",
@@ -22,27 +27,35 @@
     "@angular/platform-browser": "~12.2.7",
     "@angular/platform-browser-dynamic": "~12.2.7",
     "@angular/router": "~12.2.7",
+    "express": "^4.18.2",
+    "install": "^0.13.0",
     "jasmine-core": "^3.9.0",
+    "npm": "^8.19.2",
+    "path": "^0.12.7",
     "rxjs": "7.3.0",
+    "save-dev": "^0.0.1-security",
     "tslib": "^2.3.1",
+    "typescript": "~4.3.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.7",
-    "@angular/cli": "~12.2.7",
+    "@angular/cli": "^14.2.7",
     "@angular/compiler-cli": "~12.2.7",
+    "@cypress/schematic": "^1.6.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cypress": "^9.3.1",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.3.5"
-  }
+  },
+  "engines": { "node": "16.14.0", "npm": "7.24.1node-v" }
 }
