--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/compiler": "~12.2.7",
     "@angular/compiler-cli": "~12.2.7",
     "@angular/core": "~12.2.7",
-    "@angular/flex-layout": "^12.0.0-beta.35",
+    "@angular/flex-layout": "~12.2.7",
     "@angular/forms": "~12.2.7",
     "@angular/material": "^12.2.7",
     "@angular/platform-browser": "~12.2.7",
