--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.7",
-    "@angular/cdk": "^12.2.7",
-    "@angular/cli": "^12.2.7",
+    "@angular/cdk": "~12.2.7",
+    "@angular/cli": "~12.2.7",
     "@angular/common": "~12.2.7",
     "@angular/compiler": "~12.2.7",
     "@angular/compiler-cli": "~12.2.7",
     "@angular/core": "~12.2.7",
-    "@angular/flex-layout": "~12.2.7",
+    "@angular/flex-layout": "^12.0.0-beta.35",
     "@angular/forms": "~12.2.7",
     "@angular/material": "^12.2.7",
     "@angular/platform-browser": "~12.2.7",
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.7",
-    "@angular/cli": "^12.2.7",
+    "@angular/cli": "~12.2.7",
     "@angular/compiler-cli": "~12.2.7",
     "@cypress/schematic": "^1.6.0",
     "@types/jasmine": "~3.6.0",
