--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start" : "node server.js",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -16,7 +16,6 @@
   "dependencies": {
     "@angular/animations": "^12.2.7",
     "@angular/cdk": "^12.2.7",
-    "@angular/cli": "^12.2.7",
     "@angular/common": "^12.2.7",
     "@angular/compiler": "^12.2.7",
     "@angular/compiler-cli": "^12.2.7",
@@ -30,7 +29,7 @@
     "express": "^4.18.2",
     "install": "^0.13.0",
     "jasmine-core": "^3.9.0",
-    "npm": "^8.19.2",
+    "npm": "^10.6.0",
     "path": "^0.12.7",
     "rxjs": "7.3.0",
     "save-dev": "^0.0.1-security",
@@ -39,14 +38,14 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.7",
-    "@angular/cli": "^12.2.7",
+    "@angular-devkit/build-angular": "^17.3.6",
+    "@angular/cli": "^17.3.6",
     "@angular/compiler-cli": "^12.2.7",
     "@cypress/schematic": "^1.6.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "cypress": "^9.3.1",
+    "codelyzer": "^0.0.28",
+    "cypress": "^13.8.1",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
@@ -57,5 +56,8 @@
     "tslint": "~6.1.0",
     "typescript": "~4.3.5"
   },
-  "engines": { "node": "16.14.0", "npm": "7.24.1" }
+  "engines": {
+    "node": "16.14.0",
+    "npm": "7.24.1"
+  }
 }
