--- a/package.json
+++ b/package.json
@@ -14,37 +14,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.7",
-    "@angular/cdk": "^12.2.7",
-    "@angular/common": "^12.2.7",
-    "@angular/compiler": "^12.2.7",
-    "@angular/compiler-cli": "^12.2.7",
-    "@angular/core": "^12.2.7",
-    "@angular/flex-layout": "^12.0.0-beta.35",
-    "@angular/forms": "^12.2.7",
-    "@angular/material": "^12.2.7",
-    "@angular/platform-browser": "^12.2.7",
-    "@angular/platform-browser-dynamic": "^12.2.7",
-    "@angular/router": "^12.2.7",
+    "@angular/animations": "^17.0.0",
+    "@angular/cdk": "^17.0.0",
+    "@angular/common": "^17.0.0",
+    "@angular/compiler": "^17.0.0",
+    "@angular/compiler-cli": "^17.0.0",
+    "@angular/core": "^17.0.0",
+    "@angular/flex-layout": "^17.0.0",
+    "@angular/forms": "^17.0.0",
+    "@angular/material": "^17.0.0",
+    "@angular/platform-browser": "^17.0.0",
+    "@angular/platform-browser-dynamic": "^17.0.0",
+    "@angular/router": "^17.0.0",
     "express": "^4.18.2",
     "install": "^0.13.0",
     "jasmine-core": "^3.9.0",
     "npm": "^10.6.0",
     "path": "^0.12.7",
-    "rxjs": "7.3.0",
+    "rxjs": "7.4.0",
     "save-dev": "^0.0.1-security",
     "tslib": "^2.3.1",
-    "typescript": "~4.3.5",
+    "typescript": "~5.2.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.6",
     "@angular/cli": "^17.3.6",
-    "@angular/compiler-cli": "^12.2.7",
+    "@angular/compiler-cli": "^14.0.0",
     "@cypress/schematic": "^1.6.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "codelyzer": "^0.0.28",
+    "codelyzer": "^6.0.2",
     "cypress": "^13.8.1",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
@@ -53,8 +53,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "tslint": "~6.1.0"
   },
   "engines": {
     "node": "16.14.0",
