--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser": "^17.3.12",
     "@angular/platform-browser-dynamic": "^17.3.12",
     "@angular/router": "^17.3.12",
-    "express": "^4.18.2",c
+    "express": "^4.18.2",
     "install": "^0.13.0",
     "jasmine-core": "^3.9.0",
     "npm": "^10.6.0",
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.8",
-    "@angular/cli": "^17.3.8",
+    "@angular/cli": "^18.2.0",
     "@cypress/schematic": "^1.6.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
