--- a/angular.json
+++ b/angular.json
@@ -16,7 +16,7 @@
             "outputPath": "dist/foodmanager",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
